# socket-throughput

./: README.md
java-webserver/: .editorconfig  settings.gradle
java-webserver/app/: build.gradle
java-webserver/app/src/main/java/javaWebserver/: App.java  Helper.java  TcpApp.java
java-webserver/app/src/test/java/javaWebserver/: AppTest.java
perf/: .editorconfig  Cargo.toml  README.md
perf/src/: main.rs
rust-webserver/: Cargo.toml
rust-webserver/src/: main.rs
springinit/: build.gradle  settings.gradle
springinit/src/main/java/com/javaWebserver/springinit/: ApiController.java  JsonObj.java  SocketHandler.java  SpringinitApplication.java  WebSocketConfig.java
springinit/src/test/java/com/javaWebserver/springinit/: SpringinitApplicationTests.java
