[package]
name = "perf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-codec = "0.5.0"
actix-rt = "2.8.0"
actix-web = "4.3.1"
actix-web-actors = "4.2.0"
awc = "3.1.1"
futures = "0.3.26"
futures-util = "0.3.26"
tokio = { version = "1.26.0", features = ["full"] }
