[package]
name = "perf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-codec = "0.5.0"
actix-rt = "2.8.0"
actix-web = "4.3.1"
actix-web-actors = "4.2.0"
awc = "3.1.1"
clap = { version = "4.1.8", features = ["derive"] }
deku = "0.16.0"
env_logger = "0.10.0"
futures = "0.3.26"
futures-util = "0.3.26"
log = "0.4.17"
tokio = { version = "1.26.0", features = ["full"] }
